[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/temp_piece.png" type="Texture" id=1]
[ext_resource path="res://scripts/Scripts.gd" type="Script" id=2]
[ext_resource path="res://sprites/red square.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Move.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Move2.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Move3.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Move4.gd" type="Script" id=7]

[node name="Piece_test" type="Sprite"]
editor/display_folded = true
position = Vector2( 32, 32 )
texture = ExtResource( 1 )
centered = false
region_rect = Rect2( 32, 32, 32, 0 )
script = ExtResource( 2 )

[node name="Move" type="Sprite" parent="."]
position = Vector2( -80, 0 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 4 )

[node name="Move2" type="Sprite" parent="."]
position = Vector2( -80, 0 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 5 )

[node name="Move3" type="Sprite" parent="."]
position = Vector2( -80, 0 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 6 )

[node name="Move4" type="Sprite" parent="."]
position = Vector2( -80, 0 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 7 )
